--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
+    "type-fest": "^4.8.3",
+    "y-indexeddb": "^9.0.12",
+    "yjs": "^13.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
